    trunk).
    * RubyDebuggerProxy
      * use isFinished instead of checkConnection, getting rid of 'connected'
      * s/connect/setDebugTarget (this what it actually do now)
      * relaxing addBreakpoint, to emit warning instead of exception (debuggee
        could die)
    * ReadersSupport does not throw redundant RubyDebuggerException anymore

0.9.0 - 0.9.1
-------------

  * Fixes race condition in breakpoint management
  * Support for 'catchpointSet' feedback introduced in ruby-debug-ide 0.3.0.
  * General method for custom rdebug-ide starting - e.g. for being able to
    debug JRuby under Glassfish (patch from Peter Williams)
  * Minor bugfixes


0.8.0 - 0.9.0
-------------

  * Support for exception breakpoints (catchpoints)
  * Support for setting condition (expression returning boolean) on breakpoint
  * better handling of Segmentaion Fault bug in native Ruby
  * Fail immediately in the case process failed. Do not wait for timeout.
  * RubyDebuggerFactory#Descriptor.setJRuby(). Possibility for a client to say
    that interpreter is JRuby. If yes, appropriate flags to 'enable' debugging
    are set
  * Put an interpreter options before iosynchronizer; causes problem to
    jruby's -J-Dxxx args
  * Return 'NilClass' instead of null for 'nil' values
  * Fixed wrong position of additional options to Ruby interpreter
  * Incompatible API change. Force to pass a Ruby interpreter for ruby-debug.
  * Ability to affect RubyDebuggerFactory.Descriptor's verbosity through
    org.rubyforge.debugcommons.verbose system property.
  * Implementing hashCode and equals for RubyVariable. Might be needed by
    frontend variables views.
  * Fix: invoke appropriate rdebug-ide version when it was set


0.7.2 - 0.8.0
-------------

  * minor refactoring in RubyDebuggerProxy: s/sendStepOverEnd/sendStepOver
  * ability to customize interpreter to be used by the rdebug-ide executable
  * fixed NPE from RubyThread.canStep(Into|Over) methods. The methods also